--- a/src/main/resources/de/ruzman/fxslides/presentation/fxml/slides/slide1.fxml
+++ b/src/main/resources/de/ruzman/fxslides/presentation/fxml/slides/slide1.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Rectangle?>
+<?import de.ruzman.fxslides.presentation.*?>
 
-<Group xmlns:fx="http://javafx.com/fxml">
-	<Button text="%test"></Button>
-</Group>
+<AnchorPane xmlns:fx="http://javafx.com/fxml" id="slide1" styleClass="slide1-background">
+</AnchorPane>
