--- a/src/main/resources/de/ruzman/fxslides/presentation/fxml/slides/slide1.fxml
+++ b/src/main/resources/de/ruzman/fxslides/presentation/fxml/slides/slide1.fxml
@@ -11,4 +11,5 @@
 <?import de.ruzman.fxslides.presentation.*?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml" id="slide1" styleClass="slide1-background">
+	<Label text="Hallo?" />
 </AnchorPane>
