--- a/src/main/resources/de/ruzman/fxslides/presentation/fxml/slides/slide1.fxml
+++ b/src/main/resources/de/ruzman/fxslides/presentation/fxml/slides/slide1.fxml
@@ -3,13 +3,36 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.*?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.*?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import de.ruzman.fxslides.presentation.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.geometry.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" id="slide1" styleClass="slide1-background">
-	<Label text="Hallo?" />
-</AnchorPane>
+<StackPane xmlns:fx="http://javafx.com/fxml"  fx:id="slide">
+	<GridPane>
+	    <columnConstraints>
+	        <ColumnConstraints percentWidth="6.5" />     
+	        <ColumnConstraints percentWidth="89.5" />
+	        <ColumnConstraints percentWidth="4" />
+	    </columnConstraints>
+	    <rowConstraints>
+	        <RowConstraints percentHeight="19"/> 
+	        <RowConstraints percentHeight="75"/>
+	        <RowConstraints percentHeight="6"/>    
+	    </rowConstraints> 
+	
+		<StackPane GridPane.columnIndex="0" GridPane.rowIndex="1" styleClass="red-line-on-top" />
+		<StackPane GridPane.columnIndex="0" GridPane.rowIndex="2" styleClass="red-line-on-top" />
+		<StackPane GridPane.columnIndex="1" GridPane.rowIndex="1" styleClass="red-line-on-top" />
+		<StackPane GridPane.columnIndex="1" GridPane.rowIndex="2" styleClass="red-line-on-top">
+			<Label text="1" styleClass="msg-footer-pagenumber" StackPane.alignment="CENTER_RIGHT" />
+			<Label text="© msg | September 2017 | Gestensteuerung: In der Zukunft zeigen wir's" styleClass="msg-footer-copyright" StackPane.alignment="CENTER_LEFT" />
+		</StackPane>
+		<StackPane GridPane.columnIndex="2" GridPane.rowIndex="1" styleClass="red-line-on-top" />
+		<StackPane GridPane.columnIndex="2" GridPane.rowIndex="2" styleClass="red-line-on-top" />
+	</GridPane>
+	<Circle fx:id="msgCircle" styleClass="msg-red-fill" />
+	<VBox fx:id="title" spacing="15">
+		<Label text="Gestensteuerung" styleClass="msg-presentation-title" />
+		<Label text="In der Zukunft zeigen wir's" styleClass="msg-presentation-subtitle" />
+	</VBox>
+</StackPane>
